# deepfake-detector-llm

./: .coverage  .env.example  .gitignore  README.md  prompt_log.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  PRD.md  USER_GUIDE.md  VIDEO_GENERATION.md
notebooks/: analysis.ipynb  executed_analysis.py  test_analysis.txt
src/deepfake_detector/: __init__.py  cli.py  pipeline.py
src/deepfake_detector/decision/: parser.py
src/deepfake_detector/detectors/: base.py  llm_detector.py  registry.py
src/deepfake_detector/evidence/: basic_signals.py  blink.py
src/deepfake_detector/generation/: opencv_generator.py
src/deepfake_detector/llm/: azure_client.py  client_base.py  gemini_client.py  mock_client.py
src/deepfake_detector/llm_input/: input_builder.py
src/deepfake_detector/prompts/: prompt_builder.py
src/deepfake_detector/video/: frames.py  quality_checks.py  reader.py
tests/: test_cli.py  test_decision_parser.py  test_evidence.py  test_evidence_basic_signals.py  test_evidence_blink.py  test_llm_clients.py  test_llm_input_builder.py  test_pipeline.py  test_plugin_system.py  test_prompt_builder.py  test_video_frames.py  test_video_quality_checks.py  test_video_reader.py
